--- a/tools/benchmarking.Rmd
+++ b/tools/benchmarking.Rmd
@@ -168,7 +168,56 @@ p1 <- p1 + theme(axis.title=element_text(size=12),
 save_plot("neutrality/no_migration/ratios_no-mig.pdf", p1, base_height=12, base_width=12)
 ```
 
-# Selection
+# Selection 1-population
+
+```{python run-momentsTwoLocus, include=TRUE, eval=TRUE, results=FALSE}
+
+import moments.TwoLocus
+import numpy as np
+
+Ne = 1e4
+s = -1e-4
+u = 1e-7
+r = 1e-5
+
+gammas = [2 * Ne * s, 2 * Ne * s, 0] # selection on [AB, Ab, aB] haplotypes, resp
+rho = 4 * Ne * r
+theta = 4 * Ne * u
+
+if np.abs(2 * Ne * s) > 20:
+    print("Strong selection, approximations may break down")
+
+#print("2Ns   =", 2 * Ne * s)
+#print("rho   =", rho)
+#print("theta =", theta)
+
+n_samples = 40
+
+F = moments.TwoLocus.Demographics.equilibrium(
+    n_samples, rho=rho, theta=theta, sel_params=gammas
+)
+
+# compute LD stats from F
+print(f"D^2   = {F.D2():}")
+print(f"Dz    = {F.Dz():}")
+#print(f"pi2   = {F.pi2():}")
+#print(f"D     = {F.D():}")
+
+# single locus
+fs = moments.Spectrum(
+    moments.LinearSystem_1D.steady_state_1D(n_samples, gamma=2 * Ne * s) * theta
+)
+
+fs_left = moments.Spectrum(F[0, :, 0])
+fs_right = moments.Spectrum(F[0, 0, :])
+
+assert np.allclose(fs_left, fs)
+print(f"pi(A) = {fs_left.pi()}")
+print(f"pi(B) = {fs_right.pi()}")
+print(f"pi2   = {F.pi2():}")
+```
+
+# Selection 2-populations
 
 ## No-migration
 
@@ -180,7 +229,7 @@ save_plot("neutrality/no_migration/ratios_no-mig.pdf", p1, base_height=12, base_
 N1 <- 10000
 N2 <- c(N1, N1 / 10)
 u <- 1e-7
-r  <- c(1e-3, 1e-4, 1e-5, 1e-6, 0)
+r  <- c(1e-4, 1e-5, 1e-6, 1e-7, 0)
 s1 <- c(0, -5e-05, -1e-04, -2.5e-04, -5e-04, -1e-3)
 s2 <- c(0, -5e-05, -1e-04, -2.5e-04, -5e-04, -1e-3)
 
@@ -325,15 +374,18 @@ df <- df[df$r < 1e-3,] # for increased resolution in the plots
 df_sym_N <- df[df$N1==df$N2,]
 df_sym_N[df_sym_N$r==0,]$r <- 1e-12 # for log transformation
 
+# TODO plot pi2_1212
+
 # D1D2
 d1d2 <- subset(df_sym_N, stats %in% "DD_1_2") 
 d1d2$ratio <- d1d2$expectation / subset(df_sym_N, stats %in% "pi2_1_2_1_2")$expectation
-  
-p1 <- ggplot(data=d1d2, aes(x=r, y=ratio)) + facet_grid(+alpha_1~alpha_2)
+
+# save ratio D1D2/ pi2_1212 for later, plot D1D2 expectation now
+p1 <- ggplot(data=d1d2, aes(x=r, y=expectation)) + facet_grid(+alpha_1~alpha_2)
 p1 <- p1 + geom_point(size=3, shape=16) + geom_line() + theme_bw()
 p1 <- p1 + scale_x_log10(breaks=c(1e-12, 1e-6, 1e-5, 1e-4, 1e-3))
-p1 <- p1 + scale_y_log10(breaks=c(0.01, 0.05, 0.10, 0.2, 0.3))
-p1 <- p1 + labs(title="Symmetric Population Sizes", x="r", y="E[D1D2] / E[pi2_1212]")
+p1 <- p1 + scale_y_log10(breaks=c(1e-7, 2e-7, 4e-7, 6e-7, 1e-6))
+p1 <- p1 + labs(title="Symmetric Population Sizes", x="r", y="E[D1D2]")
 p1 <- p1 + theme(axis.title=element_text(size=16),
                  axis.text=element_text(size=12),
                  axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
@@ -341,19 +393,35 @@ p1 <- p1 + theme(axis.title=element_text(size=16),
 p1
 save_plot("selection/no_migration/Covar_D_no-mig_1.pdf", p1, base_height=12, base_width=12)
 
-d1d2 <- d1d2[d1d2$alpha_1==d1d2$alpha_2,]
+d1d2 <- d1d2[d1d2$alpha_1==d1d2$alpha_2,] # symmetric alpha
 
-p2 <- ggplot(data=d1d2, aes(x=alpha_1, y=ratio, color=as.factor(r)))
+p2 <- ggplot(data=d1d2, aes(x=alpha_1, y=expectation, color=as.factor(r)))
 p2 <- p2 + geom_point(size=3) + geom_line() + theme_bw()
 p2 <- p2 + scale_color_brewer(palette="PuOr")
-p2 <- p2 + scale_y_log10(breaks=c(0.01, 0.05, 0.10, 0.2, 0.3))
-p2 <- p2 + labs(title="Symmetric Population Sizes and Selection coefficients", x="2Ns", y="E[D1D2] / E[pi2_1212]")
+p2 <- p2 + scale_y_log10(breaks=c(1e-7, 2e-7, 4e-7, 6e-7, 1e-6))
+p2 <- p2 + labs(title="Symmetric Population Sizes and Selection coefficients", x="2Ns", y="E[D1D2]")
 p2 <- p2 + theme(axis.title=element_text(size=16),
                  axis.text=element_text(size=12),
                  axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
                  legend.position="bottom")
 p2
 save_plot("selection/no_migration/Covar_D_no-mig_2.pdf", p2, base_height=12, base_width=12)
+
+# Hr
+hr11 <- subset(df_sym_N, stats %in% "Hr_1_1") 
+
+p3 <- ggplot(data=hr11, aes(x=r, y=expectation * 1e+3, color=as.factor(alpha_1)))
+p3 <- p3 + geom_point(size=3, shape=16) + geom_line() + theme_bw()
+p3 <- p3 + scale_color_brewer(palette="PuOr")
+p3 <- p3 + scale_x_log10(breaks=c(1e-12, 1e-6, 1e-5, 1e-4))
+p3 <- p3 + scale_y_log10(breaks=pretty_breaks())
+p3 <- p3 + labs(title="Symmetric Population Sizes", x="r", y="E[Hr_11] (x 10^-3)")
+p3 <- p3 + theme(axis.title=element_text(size=16),
+                 axis.text=element_text(size=12),
+                 axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+                 legend.position="bottom")
+p3
+save_plot("selection/no_migration/Hr_11.pdf", p3, base_height=12, base_width=12)
 
 # Fst at the Left Locus
 Hl_12 <- subset(df_sym_N, stats %in% "Hl_1_2")
@@ -367,9 +435,9 @@ pi_within <- (Hl_11$expectation + Hl_22$expectation) / 2
 fst <- Hl_12 # just to copy the data frame
 fst$expectation <- 1 - pi_within / pi_between # we'll be looking at this one
 
-p3 <- plot_ly(x=fst$alpha_1, y=fst$alpha_2, z=fst$expectation, type="scatter3d", mode="markers", color=fst$expectation)
-p3
-export(p, file = "selection/no_migration/Fst_no-mig_left.pdf")
+p4 <- plot_ly(data=fst, x=~alpha_1, y=~alpha_2, z=~expectation, type="scatter3d", 
+              mode="markers", color=~expectation)
+p4
 
 # Fst at the Right Locus
 Hr_12 <- subset(df_sym_N, stats %in% "Hr_1_2")
@@ -397,20 +465,53 @@ save_plot("selection/no_migration/Fst_no-mig_right_2.pdf", p5, base_height=12, b
 
 fst <- fst[fst$alpha_1==fst$alpha_2,]
 
-p4 <- ggplot(data=fst, aes(x=alpha_1, y=expectation, color=as.factor(r)))
-p4 <- p4 + geom_point(size=3) + geom_line() + theme_bw()
-p4 <- p4 + scale_color_brewer(palette="PuOr")
-p4 <- p4 + scale_y_log10(breaks=pretty_breaks())
-p4 <- p4 + labs(title="Symmetric Population Sizes and Selection coefficients", x="2Ns", y="Fst neutral locus")
-p4 <- p4 + theme(axis.title=element_text(size=16),
+p6 <- ggplot(data=fst, aes(x=alpha_1, y=expectation, color=as.factor(r)))
+p6 <- p6 + geom_point(size=3) + geom_line() + theme_bw()
+p6 <- p6 + scale_color_brewer(palette="PuOr")
+p6 <- p6 + scale_y_log10(breaks=pretty_breaks())
+p6 <- p6 + labs(title="Symmetric Population Sizes and Selection coefficients", x="2Ns", y="Fst neutral locus")
+p6 <- p6 + theme(axis.title=element_text(size=16),
                  axis.text=element_text(size=12),
                  axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
                  legend.position="bottom")
-p4
-save_plot("selection/no_migration/Fst_no-mig_right_1.pdf", p4, base_height=12, base_width=12)
+p6
+save_plot("selection/no_migration/Fst_no-mig_right_1.pdf", p6, base_height=12, base_width=12)
 
-#TODO plot plain Hr
+# all population sizes
+df_cpy <- df
+df_cpy[df_cpy$r==0,]$r <- 1e-12 # for log transformation
 
+# D1D2
+d1d2 <- subset(df_cpy, stats %in% "DD_1_2") 
+d1d2$ratio <- d1d2$expectation / subset(df_cpy, stats %in% "pi2_1_2_1_2")$expectation
+  
+p7 <- ggplot(data=d1d2, aes(x=r, y=expectation, color=as.factor(N2))) + facet_grid(+s1~s2)
+p7 <- p7 + geom_point(size=3, shape=16) + geom_line() + theme_bw()
+p7 <- p7 + scale_color_brewer(palette="Dark2")
+p7 <- p7 + scale_x_log10(breaks=c(1e-12, 1e-6, 1e-5, 1e-4, 1e-3))
+p7 <- p7 + scale_y_log10(breaks=c(1e-7, 2e-7, 4e-7, 6e-7, 1e-6))
+p7 <- p7 + labs(title="All Population Sizes", x="r", y="E[D1D2]")
+p7 <- p7 + theme(axis.title=element_text(size=16),
+                 axis.text=element_text(size=12),
+                 axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+                 legend.position="bottom")
+p7
+save_plot("selection/no_migration/Covar_D_no-mig_3.pdf", p7, base_height=12, base_width=12)
+
+# Fst at the Left Locus
+Hl_12 <- subset(df_cpy, stats %in% "Hl_1_2")
+Hl_21 <- subset(df_cpy, stats %in% "Hl_2_1")
+Hl_11 <- subset(df_cpy, stats %in% "Hl_1_1")
+Hl_22 <- subset(df_cpy, stats %in% "Hl_2_2")
+
+pi_between <- (Hl_12$expectation + Hl_21$expectation) / 2 
+pi_within <- (Hl_11$expectation + Hl_22$expectation) / 2 
+
+fst <- Hl_12 # just to copy the data frame
+fst$expectation <- 1 - pi_within / pi_between # we'll be looking at this one
+
+p8 <- plot_ly(data=fst, x=~s1, y=~s2, z=~expectation, type="scatter3d", mode="markers", color=~N2)
+p8
 ```
 
 # Check-my-matrix
